deploy/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: kdvmanager-prod
  labels:
    name: kdvmanager-prod
    environment: production
