deploy/k8s/loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: kdvmanager
spec:
  type: LoadBalancer
  selector:
    app: envoy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
